--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="100dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop= "8dp"
-        app:srcCompat="@drawable/favorite" />
+        app:srcCompat="@drawable/coffee" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
