--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/listFragment"
-            android:icon="@drawable/favorite"
+            android:icon="@drawable/coffee_menu"
             android:title="@string/menu_coffee" />
     </group>
     <group
@@ -15,7 +15,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/favoritesFragment"
-            android:icon="@drawable/favorite"
+            android:icon="@drawable/favorite_menu"
             android:title="@string/menu_favorites" />
     </group>
 </menu>
